test/files/neg/t421.check
t421.scala:5: error: star patterns must correspond with varargs parameters
    case Bar("foo",_*) => sys.error("huh?");
                    ^
1 error
